--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.5.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "express": "^4.18.2",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1",
