--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1",
