--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.8.0",
     "react-tracked": "^1.7.11",
     "sass": "^1.69.7"
   }
