--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cloudcode.duetAI.inlineSuggestions.enableAuto": false
+  "cloudcode.duetAI.inlineSuggestions.enableAuto": false,
+  "cSpell.words": ["autosize"]
 }
