--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.8.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-tracked": "^1.7.11",
     "sass": "^1.69.7"
   }
