--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "cloudcode.duetAI.inlineSuggestions.enableAuto": false,
-  "cSpell.words": ["autosize", "nyaa"]
+  "cSpell.words": ["autosize", "mangadex", "nyaa"]
 }
