--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formidable": "^3.5.1",
     "gm": "^1.25.0",
     "immer": "^10.0.3",
+    "jsdom": "^24.0.0",
     "lodash": "^4.17.21",
     "lowdb": "^7.0.1",
     "next": "14.1.0",
